# OR-tracking

./: .gitignore  .vercelignore  README.md  app.py  download_sample.py  evaluate_tavr.py  evaluate_tavr_suite.py  export_public_demo_data.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: test.yml
docs/: deployment.md  tavr_workflow.md
docs/evaluation/: sentara_live_1800_mixed_room.labels.json  sentara_live_2400_fluoro_negative.labels.json  sentara_live_2700_room_post.labels.json  sentara_live_900_room_to_fluoro_low_motion.labels.json  sentara_live_900_static_table_fallback.labels.json  synthetic_tavr_full.labels.json  tavr_static_table_fallback_suite.json  tavr_suite.json  tavr_synthetic_suite.json
or_tracking/: __init__.py  evaluation.py  models.py  synthetic.py  tavr.py  tracker.py  video.py  workflow.py
public/: app.js  browser_identity.mjs  case_setup.mjs  index.html  replay_view.mjs  styles.css
public/demo-data/: sentara-1800-evaluation.json  sentara-2400-evaluation.json  sentara-2700-evaluation.json  sentara-900-evaluation.json  sentara-900-static-fallback-evaluation.json  synthetic-full-tavr-evaluation.json
tests/: app_module_load.test.mjs  browser_identity.test.mjs  case_setup.test.mjs  replay_view.test.mjs  test_download_sample.py  test_evaluation.py  test_static_deploy.py  test_streamlit_app.py  test_tavr.py  test_tavr_suite.py  test_tracker.py
